Add docker role

--- a/roles/base/tasks/user.yml
+++ b/roles/base/tasks/user.yml
@@ -8,4 +8,5 @@
   user:
     name: '{{ host_user }}'
     uid: 1000
-    groups: 'wheel,{{ host_group }}'
+    groups: 'wheel, {{ host_group }}'
+    append: true
