--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,33 +1,33 @@
 - name: Install docker pacman
-  pacman:
+  community.general.pacman:
     name:
       - docker
       - docker-compose
-    state: latest
+    state: present
 
 - name: Enable docker service
-  service:
+  ansible.builtin.service:
     name: docker
     enabled: true
     state: started
 
 - name: Pull debian docker image
-  docker_image:
+  community.docker.docker_image:
     name: 'debian:bookworm'
     source: pull
 
 - name: Pull alpine docker image
-  docker_image:
+  community.docker.docker_image:
     name: 'alpine:latest'
     source: pull
 
 - name: Add docker user group
-  group:
+  ansible.builtin.group:
     name: docker
     state: present
 
 - name: Add user to docker group
-  user:
+  ansible.builtin.user:
     append: true
     name: '{{ host_user }}'
     groups: docker
