python: Install lsp server

--- a/roles/misc_devtools/tasks/main.yml
+++ b/roles/misc_devtools/tasks/main.yml
@@ -31,6 +31,9 @@
   community.general.pacman:
     name:
       - python
+      - python-setuptools
+      - python-lsp-server
+      - python-pip
       - python-numpy
       - python-matplotlib
       - jupyterlab
