misc_devtools: Add golang

--- a/roles/misc_devtools/tasks/main.yml
+++ b/roles/misc_devtools/tasks/main.yml
@@ -39,3 +39,11 @@
       - jupyterlab
       - python-requests
     state: present
+
+- name: Install golang packages pacman
+  community.general.pacman:
+    name:
+      - go
+      - gopls
+      - go-tools
+    state: present
