--- a/roles/misc_devtools/tasks/main.yml
+++ b/roles/misc_devtools/tasks/main.yml
@@ -59,3 +59,11 @@
       - make
       - valgrind
     state: present
+
+- name: Install CLI graphics tools
+  community.general.pacman:
+    name:
+      - imagemagick
+      - ffmpeg
+      - libheif
+    state: present
