--- a/roles/misc/tasks/main.yml
+++ b/roles/misc/tasks/main.yml
@@ -61,13 +61,18 @@
       - valgrind
     state: present
 
-- name: Add AUR user
- ansible.builtin.user:
+- name: Add AUR builder group
+  ansible.builtin.group:
+    name: aur_builder
+    state: present
+
+- name: Add AUR builder user
+  ansible.builtin.user:
    name: aur_builder
-   group: wheel
+   group: aur_builder
 
 - name: Add aur_builder to sudoers
- ansible.builtin.lineinfile:
+  ansible.builtin.lineinfile:
    path: /etc/sudoers.d/11-install-aur_builder
    line: 'aur_builder ALL=(ALL) NOPASSWD: /usr/bin/pacman'
    create: yes
