--- a/roles/misc/tasks/main.yml
+++ b/roles/misc/tasks/main.yml
@@ -19,13 +19,6 @@
       - tig
     state: present
 
-- name: Install networking tools
-  community.general.pacman:
-    name:
-      - iproute2
-      - networkmanager
-      - netcat
-
 - name: Enable network manager service
   ansible.builtin.service:
     name: NetworkManager
@@ -62,24 +55,6 @@
       - valgrind
     state: present
 
-- name: Add AUR builder group
-  ansible.builtin.group:
-    name: aur_builder
-    state: present
-
-- name: Add AUR builder user
-  ansible.builtin.user:
-   name: aur_builder
-   group: aur_builder
-
-- name: Add aur_builder to sudoers
-  ansible.builtin.lineinfile:
-   path: /etc/sudoers.d/11-install-aur_builder
-   line: 'aur_builder ALL=(ALL) NOPASSWD: /usr/bin/pacman'
-   create: yes
-   mode: 0644
-   validate: 'visudo -cf %s'
-
 - name: Install CLI graphics tools
   community.general.pacman:
     name:
@@ -88,10 +63,8 @@
       - libheif
     state: present
 
-- name: Install yay AUR
-  vars:
-    ansible_become_user: aur_builder
-  kewlfft.aur.aur:
-    name: yay
-    state: present
-  become: true
+- name: Setup AUR
+  include_tasks: aur.yml
+
+- name: Setup networking tools
+  include_tasks: net.yml
