--- a/roles/base/tasks/ssh.yml
+++ b/roles/base/tasks/ssh.yml
@@ -6,12 +6,12 @@
 
 - name: Provide private ssh key
   ansible.builtin.copy:
-    src: '{{ private_key_path }}'
+    src: '{{ source_secrets_dir }}/ssh/id_ed25519'
     dest: '{{ host_user_home }}/.ssh/'
     mode: '0600'
 
 - name: Provide public ssh key
   ansible.builtin.copy:
-    src: '{{ public_key_path }}'
+    src: '{{ source_secrets_dir }}/ssh/id_ed25519.pub'
     dest: '{{ host_user_home }}/.ssh/'
     mode: '0644'
