Enable network manager

--- a/roles/misc/tasks/net.yml
+++ b/roles/misc/tasks/net.yml
@@ -13,3 +13,8 @@
   community.general.ufw:
     state: enabled
     policy: allow
+
+- name: Enable network manager
+  ansible.builtin.service:
+    name: NetworkManager
+    enabled: true
